# FreePhyloTree

./: .gitignore  BranchReadme  CMakeLists.txt  CODE_STYLING.txt  Clade.cpp  Clade.hpp  CladeViewer.cpp  CladeViewer.hpp  ColloidMakeTree.cpp  ColloidMakeTree.hpp  Engine.cpp  Engine.hpp  EventManager.cpp  EventManager.hpp  FreePhyloTree.cpp  FreePhyloTree.hpp  GLEngine.cpp  GLEngine.hpp  GourceianMakeTree.cpp  GourceianMakeTree.hpp  INSTALL  IteratorPhyloTree.cpp  IteratorPhyloTree.hpp  Node.cpp  Node.hpp  PhyloNode.cpp  PhyloNode.hpp  PhyloTree.cpp  PhyloTree.hpp  README  SphereMakeTree.cpp  SphereMakeTree.hpp  StandardCladeViewer.cpp  StandardCladeViewer.hpp  StrategyColor.cpp  StrategyColor.hpp  StrategyMakeTree.hpp  Viewer.cpp  Viewer.hpp  freephylotree.cbp  (+4 more)
CodeBlocksProject/: freephylotree.cbp  freephylotree.layout
GraphicEngine/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  Canvas.moc  GraphicEngine.cpp  GraphicEngine.hpp  HelpDialog.cpp  HelpDialog.hpp  LexerWiki.cpp  LexerWiki.l  Mouse.cpp  Mouse.hpp  ParserTree.cpp  ParserTree.hpp  Scene.cpp  Scene.hpp  Search.cpp  Search.hpp  Viewing.cpp  Viewing.hpp  moc_GraphicEngine.cxx
Resources/: help.xcf  logo.xcf
Strategies/: Alloc.cpp  Alloc.hpp  Color.cpp  Color.hpp  ColorNode.cpp  ColorNode.hpp  ColorTree.cpp  ColorTree.hpp  Coloring.cpp  Coloring.hpp  Interval.cpp  Interval.hpp  LocNode.cpp  LocNode.hpp  LocTree.cpp  LocTree.hpp  Smooth.cpp  Smooth.hpp  SpringLoc.cpp  SpringLoc.hpp  Strategy.cpp  Strategy.hpp  Vec2f.cpp  Vec2f.hpp  Vec3f.cpp  Vec3f.hpp
Strategies/Color/: ColorNode.cpp  ColorNode.hpp  ColorTree.cpp  ColorTree.hpp  CubeColor.cpp  CubeColor.hpp  IteratorColorTree.cpp  IteratorColorTree.hpp
Strategies/Loc/: IteratorLocTree.cpp  IteratorLocTree.hpp  LocNode.cpp  LocNode.hpp  LocTree.cpp  LocTree.hpp
Tree/: Color.cpp  Color.hpp  IteratorTree.cpp  IteratorTree.hpp  Matrix.cpp  Matrix.hpp  Node.cpp  Node.hpp  Tree.cpp  Tree.hpp  Vec.cpp  Vec.hpp  Vec2f.cpp  Vec2f.hpp
VecXf/: VecXf.cpp  VecXf.hpp
doc/: CreateDoxygen  Doxyfile
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherits.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_type.html  namespaces.html
doc/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_76.html  all_78.html  classes_63.html  classes_65.html  classes_67.html  classes_69.html  classes_6e.html  classes_70.html  classes_71.html  classes_73.html  classes_74.html  classes_76.html  enums_74.html  enumvalues_62.html  enumvalues_67.html  enumvalues_72.html  (+39 more)
doc/presentation/: presentation.tex
(+206 files in other folders)
