cmake_minimum_required(VERSION 2.6)

PROJECT(FreePhyloTree)

FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE_DIRECTORIES(/usr/include/freetype2/)

AUX_SOURCE_DIRECTORY(Tree TREE)
AUX_SOURCE_DIRECTORY(Strategies STRGY)
AUX_SOURCE_DIRECTORY(GraphicEngine GENGINE)

SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTWEBKIT TRUE)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

QT4_WRAP_CPP(MOC_HEADERS GraphicEngine/Canvas.hpp)
#QT4_AUTOMOC(Canvas.cpp)

SET(TREES PhyloTree ${TREE} ${STRGY} ${GENGINE})
SET(SRC FreePhyloTree ${TREES} program ${GENGINE})

ADD_EXECUTABLE(FreePhyloTree ${SRC} ${MOC_HEADERS})

TARGET_LINK_LIBRARIES(FreePhyloTree ftgl m ${QT_LIBRARIES})
